fix: align publication links and colors
Agent-Logs-Url: https://github.com/limengming/limengming.github.io/sessions/e8d6a6c2-87e9-4cdc-ab91-433219e53a33

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -63,7 +63,7 @@
 }
 
 .publication-title-line {
-  color: darkblue;
+  color: #00008b;
   font-size: 1em;
   font-weight: 400;
 }
@@ -82,7 +82,7 @@
 }
 
 .publication-authors-line {
-  color: dimgray;
+  color: #696969;
   font-size: 85%;
 }
 
